Fix progression table input alignment

--- a/less/sheet/actor/tab/abilities.less
+++ b/less/sheet/actor/tab/abilities.less
@@ -47,21 +47,6 @@
     width: 100%;
 }
 
-.dark-heresy .abilities .talents .item-list .items  {
-    max-height: 202px;
-    height: 202px;
-}
-
-.dark-heresy .abilities .traits .item-list .items {
-    max-height: 175px;
-    height: 175px;
-}
-
-.dark-heresy .abilities .special-abilities .item-list .items {
-    max-height: 100px;
-    height: 100px;
-}
-
 .dark-heresy .abilities .abilities-table {
     --table-columns: 20fr 73fr 7fr;
 }
