--- a/less/sheet/actor/tab/combat.less
+++ b/less/sheet/actor/tab/combat.less
@@ -204,11 +204,6 @@
     width: 100%;
 }
 
-.dark-heresy .combat .weapons .item-list .items {
-    max-height: 100px;
-    height: 100px;
-}
-
 .dark-heresy .combat .psychic-powers {
     display: flex;
     flex-direction: column;
@@ -305,11 +300,6 @@
 
 .dark-heresy .combat .psychic-powers .item-list .items .psychic-power {
     width: 100%;
-}
-
-.dark-heresy .combat .psychic-powers .item-list .items {
-    max-height: 141px;
-    height: 141px;
 }
 
 .dark-heresy .combat .combat-weapons-table {
