--- a/less/sheet/actor/tab/psychic-powers.less
+++ b/less/sheet/actor/tab/psychic-powers.less
@@ -30,11 +30,6 @@
     width: 100%;
 }
 
-.dark-heresy .psychic .psychic-powers .item-list .items  {
-    max-height: 611px;
-    height: 611px;
-}
-
 .dark-heresy .psychic .psychic-list-table {
     --table-columns: 20fr 73fr 7fr;
     height: 638px;
